discussion/kv_engine/163189/163189_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Move VBucket (in-mem) purgeSeqno update to PurgedItemContext

Add a new PurgedItemContext (MagmaImplicitCompactionPurgedItemContext)
so that we can pull out the implicit compaction specific logic to update
the VBucket purge seqno from compactionCore and instead update it via
purgedItem/updateRollbackPurgeSeqno.

Change-Id: Ie3b280ced3583f830e68366c8eb6e3d7b4b03bf6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-10-11 10:43:04.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-11 11:07:47.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34870/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34870/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41012/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(314): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41012/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13370/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_purged_item_context.h:23:18: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual void updateRollbackPurgeSeqno(uint64_t seqno) override {
    ~~~~~~~~     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13370/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13370/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3001/ : FAILURE

Compile error at [2021-10-11T10:53:14.838Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3001/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15252/ : FAILURE

Compile error at [2021-10-11T11:05:13.397Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15252/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14130/ : FAILURE

Compile error at [2021-10-11T11:03:25.241Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14130/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23284/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3049/ : FAILURE

Compile error at [2021-10-11T11:01:46.456Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3049/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15864/ : FAILURE

Compile error at [2021-10-11T11:04:42.614Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15864/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12158/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14979/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
